# litehouse

./: .dockerignore  .gitignore  .mise.toml  .pnpmfile.cjs  .rusty-hook.toml  Cargo.toml  Dockerfile  biome.json  bun.lockb  contributing.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md
.cargo/: config.toml
.github/workflows/: biome.yml  build.yml  cargo-rdme.yml  napi.yml  release.yml  rust.yml
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/cockpit/: Cargo.toml  readme.md
crates/cockpit/src/: client.rs  docs.rs  future_on_close_stream.rs  litehouse.rs  macros.rs  main.rs  scalar.rs  types.rs
crates/litehouse/: Cargo.toml  changelog.md  readme.md  wasi_snapshot_preview1.reactor.wasm
crates/litehouse-cli/: Cargo.toml
crates/litehouse-cli/src/: cache_layer.rs  main.rs  registry.rs
crates/litehouse-config/: Cargo.toml  readme.md
crates/litehouse-config/src/: capabilities.rs  hash_read.rs  import.rs  lib.rs  manifest.rs  parallelism.rs
crates/litehouse/src/: cache.rs  main.rs  registry.rs  runtime.rs  server.rs  store.rs  util.rs
crates/litehouse/src/cmd/: auth.rs  generate.rs  mod.rs  packages.rs  run.rs  validate.rs
crates/litehouse/wix/: main.wxs
crates/mqtt/: Cargo.toml
crates/opendal-fs-cache/: Cargo.toml
crates/opendal-fs-cache/src/: lib.rs
crates/persistent-task/: Cargo.toml  readme.md
crates/persistent-task/src/: lib.rs
crates/plugin/: Cargo.toml  readme.md
crates/plugin-macro/: Cargo.toml  build.rs  readme.md
crates/plugin-macro/src/: lib.rs
crates/plugin-macro/wit/: deps.toml  example.ts  plugin.wit
crates/plugin/src/: http.rs  lib.rs
crates/presence/: Cargo.toml  readme.md
crates/registry/: Cargo.toml  build.rs  registry.fbs
crates/registry-js/: Cargo.toml  bun.lockb  index.d.ts  index.js  package.json
crates/registry-js/npm/darwin-arm64/: README.md  package.json
crates/registry-js/npm/darwin-x64/: README.md  package.json
crates/registry-js/npm/linux-arm-gnueabihf/: README.md  package.json
crates/registry-js/npm/linux-arm64-gnu/: README.md  package.json
crates/registry-js/npm/linux-x64-gnu/: README.md  package.json
crates/registry-js/npm/win32-ia32-msvc/: README.md  package.json
crates/registry-js/npm/win32-x64-msvc/: README.md  package.json
crates/registry-js/src/: lib.rs
crates/registry/src/: lib.rs  naming.rs  next.rs  partition.rs  partition_scheme.rs  partitioned_store.rs  registry.rs
crates/registry/src/io/: mod.rs  s3.rs
crates/samsung/: Cargo.toml  readme.md
crates/samsung/src/: lib.rs
crates/sonoff/: Cargo.toml
crates/sonoff/src/: lib.rs
crates/tasmota/: Cargo.toml  out.rs  readme.md
crates/tasmota/src/: lib.rs
crates/weather/: Cargo.toml
crates/weather/src/: lib.rs
examples/: docker-compose.yaml  kube.yaml  litehouse.bu  litehouse.kube
infra/: .terraform.lock.hcl  main.tf  versions.tf
infra/coreos/: Caddyfile  caddy.container  caddy.socket  cockpit.container  config.yml  nftables.conf
patches/: fumadocs-mdx+8.2.31.patch
plugins/mqtt/: Cargo.toml  readme.md
plugins/mqtt/src/: lib.rs
plugins/noop/: Cargo.toml
plugins/noop/src/: lib.rs
plugins/persistent-task/: Cargo.toml  readme.md
plugins/persistent-task/src/: lib.rs
plugins/presence/: Cargo.toml
plugins/presence/src/: lib.rs
plugins/samsung/: Cargo.toml
plugins/samsung/src/: lib.rs
plugins/sonoff/: Cargo.toml  readme.md
plugins/tasmota/: Cargo.toml
plugins/tasmota/src/: lib.rs
plugins/weather/: Cargo.toml  readme.md
plugins/weather/src/: lib.rs
site/: biome.json  bun.lockb  components.json  drizzle.config.ts  mdx-components.tsx  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts  tailwind.config.js  tsconfig.json  wit.tmLanguage.json
site/.source/: browser.ts  server.ts  source.config.mjs
site/app/: global.css  globals.css  layout.tsx  opengraph-image.tsx  page.css  page.module.css  page.tsx  source.ts
site/app/(auth)/: layout.tsx
site/app/(auth)/profile/[[...profile]]/: page.tsx
site/app/(auth)/sign-in/[[...sign-in]]/: page.tsx
site/app/(auth)/sign-up/[[...sign-up]]/: page.tsx
site/app/api/feedback/: route.ts
site/app/api/registry/: route.ts
site/app/api/registry/search/: route.ts
site/app/cockpit/: layout.tsx  page.tsx
site/app/cockpit/[slug]/: page.tsx
site/app/docs/: layout.tsx
site/app/docs/[[...slug]]/: page.tsx
site/app/registry/: layout.tsx  page.tsx
site/app/registry/[...slug]/: page.tsx
site/app/registry/[title]/: opengraph-image.tsx  page.tsx
site/components/: action-side-panel.tsx  add-button.tsx  app-request-button.tsx  category-sidebar.tsx  cockpit-page.tsx  code-block.tsx  copy-box.tsx  find-server.tsx  flow-editor.css  flow-editor.tsx  footer.tsx  github-button.tsx  github-stars.tsx  globe.tsx  header.tsx  login-button.tsx  manifest-button.tsx  manifest-editor.tsx  open-graph.tsx  plugin-card.tsx  plugin-page.tsx  refreshing-toggle.tsx  registry-button.tsx  registry-item.tsx  registry-page.tsx  scroll-area.tsx  see-more-modal.tsx  share-button.tsx  shema-editor.tsx  theme-toggle.tsx  toolbar.tsx
site/components/ui/: button.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  input-otp.tsx  input.tsx  sheet.tsx  sonner.tsx  table.tsx
site/content/: index.mdx  terminology.mdx
site/content/commands/: build.mdx  registry.mdx
site/content/docs/: commands.mdx  index.mdx  plugins.mdx  settings.mdx
site/content/docs/cockpit/: features.mdx  index.mdx
site/content/docs/commands/: auth.mdx  build.mdx  index.mdx
site/content/docs/plugins/: authoring.mdx  index.mdx
site/content/plugins/: authoring.mdx  hosting.mdx  index.mdx
site/drizzle/: 0000_lovely_iron_fist.sql  0001_stiff_firebrand.sql
site/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
site/hooks/: use-copy-button.ts  use-hash.ts  use-indexed-db.ts  use-media-query.ts  use-not-null.ts
site/lib/: auth-client.ts  auth-schema.ts  auth.ts  cockpit-client.ts  db.ts  github.ts  openapi.ts  opengraph-fetch.ts  registry.ts
site/patches/: fumadocs-mdx+8.2.19.patch
site/scripts/: migrate.ts
(+2 files in other folders)
