[workspace]
members = ["crates/*"]
resolver = "2"

[profile.release]
strip = true
opt-level = "z"
panic = "abort"
lto = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
lto = false

[patch.crates-io]
opendal = { git = "https://github.com/apache/opendal", rev = "4d5df20" }

[workspace.metadata.groups]
plugins = [
    "path:crates/samsung",
    "path:crates/sonoff",
    "path:crates/tasmota",
    "path:crates/weather",
]
