[workspace]
members = ["crates/*", "plugins/*"]
resolver = "2"

[workspace.package]
repository = "https://github.com/arlyon/litehouse"
authors = ["Alexander Lyon <arlyon@me.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A lightweight home automation server"
homepage = "https://litehouse.arlyon.dev"

[profile.release]
strip = true
opt-level = "z"
panic = "abort"
lto = "thin"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
lto = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[patch.crates-io]
opendal = { git = "https://github.com/apache/opendal", rev = "4d5df20" }

[workspace.metadata.groups]
plugins = [
  "path:crates/samsung",
  "path:crates/sonoff",
  "path:crates/tasmota",
  "path:crates/weather",
]
bin = [
  "path:crates/litehouse",
  "path:crates/litehouse-config",
  "path:crates/plugin",
  "path:crates/plugin-macro",
]

# Config for 'cargo dist'
[workspace.metadata.dist]
allow-dirty = ["ci", "msi"]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.16.7"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "aarch64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
cache-provider = "buildjet"

[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "buildjet-8vcpu-ubuntu-2204-arm"
aarch64-unknown-linux-musl = "buildjet-8vcpu-ubuntu-2204-arm"
