[package]
name = "litehouse-auth"
version = "0.1.0"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
bytes = "1.6.0"
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.5", features = ["tokio"] }
oauth = "0.0.1"
oauth2 = { version = "4.4.2", features = ["pkce-plain"] }
open = "5.1.4"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_qs = "0.13.0"
serde_urlencoded = "0.7.1"
tokio = { version = "1.38.0", features = ["macros", "signal"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tower-service = "0.3.2"
tracing = "0.1.40"
url = "2.5.1"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["macros"] }
