[package]
name = "litehouse-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
bytes = "1.5.0"
clap = { version = "4.5.1", features = ["derive"] }
directories-next = "2.0.0"
litehouse-config = { version = "0.1.0", path = "../litehouse-config" }
opendal = { version = "0.45.0", default-features = false, features = ["services-s3", "rustls", "services-fs"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "process", "fs", "rt-multi-thread"] }
