[package]
name = "litehouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.75"
clap = { version = "4.4.12", features = ["derive"] }
console-subscriber = "0.2.0"
directories = "5.0.1"
futures = "0.3"
plugin = { version = "0.1.0", path = "../plugin" }
schemars = "0.8.16"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "time", "tracing"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wasmtime = "19.0.0"
wasmtime-wasi = { version = "19.0.0", features = ["tokio"] }
wasmtime-wasi-http = "19.0.0"
