[package]
name = "litehouse"
version = "0.1.0"
edition = "2021"
description = "A home automation system using WebAssembly"
license = "MIT OR Apache-2.0"

[features]
dhat-heap = [] # if you are doing heap profiling
console = ["dep:console-subscriber"]

[dependencies]
async-trait = "0.1.75"
bitcode = "0.6.0-beta.1"
clap = { version = "4.4.12", features = ["derive"] }
console-subscriber = {version = "0.2.0", optional = true }
dhat = "0.3.3"
directories = "5.0.1"
futures = "0.3"
itertools = "0.12.1"
jsonc-parser = { version = "0.23.0", features = ["serde", "serde_json"] }
jsonschema = "0.17.1"
litehouse-config = { version = "0.1.0", path = "../litehouse-config" }
lz4_flex = "0.11.2"
miette = { version = "7.2.0", features = ["fancy"] }
litehouse-plugin = { version = "0.1.0", path = "../plugin" }
opendal = { version = "0.45.1", default-features = false, features = [
    "services-s3",
    "rustls-webpki",
    "services-fs",
] }
schemars = "0.8.16"
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "time", "tracing", "signal", "process"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wasmtime = { version = "19.0.0", features = ["incremental-cache"] }
wasmtime-wasi = { version = "19.0.0" }
wasmtime-wasi-http = "19.0.0"
reqwest = { version = "0.11.24", default-features = false, features = [
    "rustls-tls",
] }
reqsign = "0.14.9"
anyhow = "1.0.81"
bytes = "1.5.0"
which = "6.0.1"
inquire = "0.7.5"

[target."cfg(target_os = \"hermit\")".dependencies]
hermit = "0.9.0"
