[package]
name = "litehouse-plugin-macro"
version = "0.1.0"
description = "A macro for generating Litehouse plugins"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = { version = "2.0.46", features = ["full"] }
