[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugin-macro = { version = "0.1.0", path = "../plugin-macro" }
schemars = "0.8.16"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_path_to_error = "0.1.14"
tracing-subscriber = "0.3.18"
# wasi = "0.11.0"
# wasmtime-wasi-http = "17.0.0"
wit-bindgen = "0.16.0"
