[package]
name = "litehouse-plugin"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library for generating Litehouse plugins"

[dependencies]
litehouse-plugin-macro = { version = "0.1.0", path = "../plugin-macro" }
schemars = { version = "0.8.16", default-features = false, features = [
    "derive",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_path_to_error = "0.1.14"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wit-bindgen = "0.22.0"
