[package]
name = "litehouse-registry"
version = "0.1.0"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1.80"
flatbuffers = "24.3.25"
litehouse-config = { version = "0.1.0", path = "../litehouse-config" }
memmap2 = "0.9.4"
miette = "7.2.0"
opendal = "0.45.1"
opendal-fs-cache = { version = "0.1.0", path = "../opendal-fs-cache" }
stable_deref_trait = "1.2.0"
tokio = { version = "1.38.0", features = ["fs"] }
tracing = "0.1.40"

# anonymous s3
anyhow = "1.0.86"
reqsign = { version = "0.14.9" }
reqwest = { version = "0.11.24", default-features = false, features = [
  "rustls-tls",
] }
futures = "0.3.30"

[build-dependencies]
flatc-rust = "0.2.0"

[dev-dependencies]
test-case = "3.3.1"
tokio = { version = "1.38.0", features = ["macros"] }
