[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugin = { version = "0.1.0", path = "../plugin" }
schemars = { version = "0.8.16", default_features = false, features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_path_to_error = "0.1.14"

[lib]
crate-type = ["cdylib"]
