[package]
name = "noop"
version = "0.1.0"
readme = "readme.md"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
litehouse-plugin = { version = "0.1.0", path = "../../crates/plugin" }

[lib]
crate-type = ["cdylib"]
