[package]
name = "persistent-task"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
litehouse-plugin = { version = "0.1.0", path = "../../crates/plugin" }
tracing = "0.1.40"

[lib]
crate-type = ["cdylib"]
