[package]
name = "samsung"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.21.7"
litehouse-plugin = { version = "0.1.0", path = "../../crates/plugin" }
rustls = "0.23.7"
schemars = "0.8.16"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_path_to_error = "0.1.14"
tracing = "0.1.40"
tungstenite = "0.21.0"
url = "2.5.0"

[lib]
crate-type = ["cdylib"]
