# cargo-features = ["per-package-target"]

[package]
name = "tasmota"
version = "0.1.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
litehouse-plugin = { version = "0.1.0", path = "../../crates/plugin" }
schemars = "0.8.16"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_path_to_error = "0.1.14"
tracing = "0.1.40"

[lib]
crate-type = ["cdylib"]
