[package]
name = "weather"
version = "0.1.1"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
litehouse-plugin = { version = "0.1.0", path = "../../crates/plugin" }
schemars = { version = "0.8.16", default-features = false, features = [
  "derive",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_path_to_error = "0.1.14"
tracing = "0.1.40"

[lib]
crate-type = ["cdylib"]
